add test to smaller dataset